[package]
name = "mtg_deck_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum="0.25"
strum_macros="0.25"
json="0.12.4"
anyhow="1.0.72"
ndarray={version = "0.15.4"}
rand="0.8.5"
rand_distr="0.4.3"
