[package]
name = "mtg_deck_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum="0.25"
strum_macros="0.25"
json="0.12.4"
anyhow="1.0.72"
nalgebra-sparse = "0.9.0"
ndarray={version = "0.15.6", features = ["serde"]}
ndarray-linalg={version = "0.14.1", features = ["openblas-system"]}
ndarray-rand={version = "0.14.0"}
openblas-src={version = "0.10.8", features = ["system"]}
rand="0.8.5"
rand_distr="0.4.3"
postcard={version = "1.0.7", features = ["alloc"]}
serde="1.0.137"
serde_derive="1.0.137"
svdlibrs="0.5.1"
streaming-stats="0.2.3"
